2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/04_unray_minsu_aff_int.deca
// Description :
//      afféctation d'une Unray Minus devant un int dans un int 
// Resultats :
//    Valide 
//
// Historique :
// cree le 09/01/2024

{
    int a = -2 ;
}