2A/05_Projet_GL/src/test/deca/context/invalid/complet/09_super_class_int.deca
// Description :
//     extends d'un type non class 
// Resultats :
//    ligne 9 : nature attendu class 
// Historique :
//  cree le 16/01/2024


class A extends int {
    
}